--- a/Backend/TrendLoom/src/main/resources/application.properties
+++ b/Backend/TrendLoom/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 server.port = 8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/trendloom2
-spring.datasource.username=postgres
-spring.datasource.password=akshay
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=$DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dhruvisha0509@gmail.com
-spring.mail.password=pfcv jyek wnap gltq
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
