--- a/Backend/TrendLoom/pom.xml
+++ b/Backend/TrendLoom/pom.xml
@@ -85,6 +85,13 @@
 			<version>1.4.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
